# app/cart/routes.go
@@ -3,8 +3,6 @@ package cart
 import (
 	"bamachoub-backend-go-v1/utils"
 	"bamachoub-backend-go-v1/utils/middleware"
-	"log"
-
 	"github.com/gofiber/fiber/v2"
 )
 
@@ -16,19 +14,38 @@ func Routes(app fiber.Router) {
 			return c.JSON(err)
 		}
 		isAuthenticated := c.Locals("isAuthenticated").(bool)
-		log.Println(1)
 		isLogin := c.Locals("isLogin").(bool)
-		log.Println(isLogin)
-
 		userKey := c.Locals("userKey").(string)
-		log.Println(1)
-		  
+		tempUserKey := c.Get("temp-user-key", "")
 
-		resp, err := addToCart(*cIn, isLogin, userKey, isAuthenticated)
+		resp, err := addToCart(*cIn, isLogin, userKey, tempUserKey, isAuthenticated)
 		if err.Status != -1 {
 			return c.Status(err.Status).JSON(err)
 		}
 		return c.JSON(resp)
 	})
+	r.Get("/", middleware.AddToCartAuth, func(c *fiber.Ctx) error {
+
+		isLogin := c.Locals("isLogin").(bool)
+		userKey := c.Locals("userKey").(string)
+
+		tempUserKey := c.Get("temp-user-key", "")
+
+		if tempUserKey == "" && userKey == "" {
+			return c.Status(400).SendString("user key missing ")
+		}
+		if userKey == "" {
+			userKey = tempUserKey
+		}
+
+		resp, err := getCartByUserKey(isLogin, userKey)
+		if err.Status != -1 {
+			return c.Status(err.Status).JSON(err)
+		}
+		return c.JSON(resp)
+	})
+
+	r.Patch("/:key", middleware.AddToCartAuth, update)
+	r.Delete("/:key", middleware.AddToCartAuth, remove)
 
 }
